--- a/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-expanded-content/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-expanded-content/style.scss
@@ -83,12 +83,24 @@ $color-red: var(--studio-red-50);
 	}
 }
 
-.is-up {
+.is-up,
+.is-free {
 	@include svg-color($color-green, $color-green, $color-green);
 }
 
-.is-down {
+.is-down,
+.is-full {
 	@include svg-color($color-red, $color-red, $color-red);
+}
+
+.is-free,
+.is-full {
+	position: relative;
+	left: 0;
+}
+
+.site-expanded-content__card-content-count-used {
+	margin-right: 0.5rem;
 }
 
 .site-expanded-content__card-content-count-title {
@@ -136,5 +148,10 @@ button.site-expanded-content__card-button {
 		.site-expanded-content__card-button {
 			white-space: nowrap;
 		}
+	}
+
+	.expanded-card__empty-content {
+		padding: 0 0 16px;
+		justify-content: flex-start;
 	}
 }
