--- a/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-expanded-content/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-expanded-content/style.scss
@@ -83,24 +83,12 @@ $color-red: var(--studio-red-50);
 	}
 }
 
-.is-up,
-.is-free {
+.is-up {
 	@include svg-color($color-green, $color-green, $color-green);
 }
 
-.is-down,
-.is-full {
+.is-down {
 	@include svg-color($color-red, $color-red, $color-red);
-}
-
-.is-free,
-.is-full {
-	position: relative;
-	left: 0;
-}
-
-.site-expanded-content__card-content-count-used {
-	margin-right: 0.5rem;
 }
 
 .site-expanded-content__card-content-count-title {
@@ -108,9 +96,9 @@ $color-red: var(--studio-red-50);
 	color: var(--studio-gray-40);
 }
 
-button.site-expanded-content__card-button {
+.site-expanded-content__card-button {
 	color: var(--studio-black) !important;
-	border-color: var(--studio-black);
+	width: fit-content;
 }
 
 .is-small-screen {
